--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="icon" type="image/svg+xml" href="/nerdwave-small.svg" />
 
   <meta name="description" content="" />
-  <meta name="keywords" content="Software Development, Software Engineering, Nerdwave, Developer, Dev, Programming" />
-  <meta name="author" content="Nerdwave" />
+  <meta name="keywords" content="Game Wiki, Ravenswatch, Nerdwave" />
+  <meta name="author" content="nerdwave-nick" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ravenwatcher</title>
 </head>
